# LiverRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Denoise.py  LiverRenderer.py  MitsubaRunner.py  RendererSettings.yml  cornell_box.exr  results.py
ext/: CMakeLists.txt
include/mitsuba/core/: object.h  octree.h
liver/: prepare_medium.py
liver/data/: bile_data.txt  hemoglobin_data.txt  lipid_data.txt  water_data.txt
liver/glisson/: collagen.py  elastin.py
liver/parenchyma/: bile.py  blood.py  hepatocity.py  lipid.py  water.py  water_lipid.py
pysrc/: render_real_time.py  vertex_shader.glsl
pysrc/liver/: prepare_medium.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/emitters/: envmap.cpp
src/films/: hdrfilm.cpp
src/integrators/: CMakeLists.txt  biovolpath.cpp  biovolpath06.cpp  path.cpp  volpath.cpp  volpath_backup.cpp  volpathmis.cpp
src/media/: CMakeLists.txt  glissonCapsule.cpp  heterogeneous.cpp  homogeneous.cpp  liver.cpp  organic_material.h  parenchyma.cpp
src/mitsuba/: CMakeLists.txt  mitsuba.cpp  realtime.hpp
src/render/: CMakeLists.txt  endpoint.cpp  integrator.cpp  medium.cpp  mesh.cpp  scene.cpp  sensor.cpp  shape.cpp  sss_particle_tracer.cpp  subsurface.cpp  vaehelper.cpp
src/sensors/: perspective.cpp
src/subsurface/: CMakeLists.txt  bluenoise.hpp  dipole.cpp  irrproc.cpp  irrproc.h  irrtree.h  scattereigen.h  vaeconfig.h  vaehelper.h  vaehelpereigen.cpp  vaehelpereigen.h  vaescatter.cpp
src/subsurface(backup)/: irrproc.h  irrtree.cpp  irrtree.h  scattereigen.h  vaehelper.h  vaescatter-backup.cpp  vaescatter.cpp
(+118 files in other folders)
